Changes for Filter Effects specification
----------------------------------------

2013-08-05  Dirk Schulze  <dschulze@adobe.com>
- Fix initial values for interpolation on grayscale, invert and sepia.

2013-08-05  Dirk Schulze  <dschulze@adobe.com>
- Clarify lacuna values for filter shorthands.
- Fix a bug with drop-shadow syntax.

2013-07-16  Dirk Schulze  <dschulze@adobe.com>
- Be more explicit on parsing instructions for filter functions.

2013-07-14  Dirk Schulze  <dschulze@adobe.com>
- Explicitly state allowed ranges and lacuna values for filter functions.

2013-07-09  Dirk Schulze  <dschulze@adobe.com>
- Just support one shadow item for drop-shadow in the first level.

2013-07-04  Dirk Schulze  <dschulze@adobe.com>
- Clarify that filter functions operate in sRGB
- Clarify interpolation between filter functions.

2013-07-04  Dirk Schulze  <dschulze@adobe.com>
- Add child selector as property value to filter property.

2013-07-04  Dirk Schulze  <dschulze@adobe.com>
- Dimension and origin of passed image to filter() CSS Image function must be preserved.

2013-06-12  Dirk Schulze  <dschulze@adobe.com>
- Removed support for 'enable-background' and require 'isolation' instead.

2013-06-08  Dirk Schulze  <dschulze@adobe.com>
- Corrected formulas for contrast changes. Detected by Kurosawa during #testTWF.

2013-05-23  Dirk Schulze  <dschulze@adobe.com>
- Switch order of index and property index.

2013-05-22  Dirk Schulze  <dschulze@adobe.com>
- Clarify that <defs> elements are not going to be masked/clipped.
- Added section about changes since the last publication.

2013-05-15  Dirk Schulze  <dschulze@adobe.com>
- Prepare specification for next WD (2).

2013-05-09  Dirk Schulze  <dschulze@adobe.com>
- Prepare specification for next WD.

2013-04-23  Dirk Schulze  <dschulze@adobe.com>
- Replace mix value none with auto.
- Clarify that Custom Shader is a host language for shaders
  and an extension of Custom Filter Function.
- Remove unnecessary shader uniforms.
