@@ -1,7 +1,10 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
-2013-08-05  Dirk Schulze  <dschulze@adobe.com>
+2013-08-14  Dirk Schulze  <dschulze@adobe.com>
+- Clarify interpolation behavior more.
+
+2013-08-13  Dirk Schulze  <dschulze@adobe.com>
 - Fix initial values for interpolation on grayscale, invert and sepia.
 
 2013-08-05  Dirk Schulze  <dschulze@adobe.com>
